# ml-lib

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt  hello_world.cpp
src/: CMakeLists.txt
test/: test_hello_wrold.cpp
